# pinentry-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: prompt.rs
src/: assuan.rs  lib.rs
