[package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust wrapper for calling pinentry to get secure password input"
homepage = "https://gitlab.com/solidninja/pinentry-rs"
license = "LGPL-3.0"
name = "pinentry-rs"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[badges]
gitlab = { repository = "solidninja/pinentry-rs" }

[dependencies]
secstr = "0.5.0"
